Stop the intersection observer menus on mobile (#761)
* Stop the intersection observer menus on mobile

* Hide section highlighter on mobile and tablet

--- a/src/static/css/page.css
+++ b/src/static/css/page.css
@@ -442,6 +442,9 @@ figure .fig-desktop {
     display: block;
     transition: max-height 0.25s ease-in;
   }
+  .index li.active:before{
+    background-color: transparent;
+  }
   .table-wrap {
     justify-content: left;
   }
